@@ -1,17 +1,20 @@
 package com.cardoffers.oms.service;
 
 import org.mockito.Mockito;
+import static org.mockito.Mockito.when;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -32,7 +35,7 @@ import com.cardoffers.oms.repository.CardholderRepository;
 import com.cardoffers.oms.repository.OfferRepository;
 
 import java.time.LocalDateTime;
-import java.util.HashSet;
+import java.util.ArrayList;
 
 @ExtendWith(MockitoExtension.class)
 class OfferEligibilityServiceImplTest {
@@ -42,10 +45,10 @@ class OfferEligibilityServiceImplTest {
     
     @Mock
     CardholderCardRepository cardholderCardRepository;
-    
+
     @Mock
     OfferRepository offerRepository;
-    
+
     @Mock
     OfferMapper offerMapper;
 
@@ -56,101 +59,93 @@ class OfferEligibilityServiceImplTest {
     OfferEligibilityServiceImpl offerEligibilityServiceImpl;
 
     @Test
-    void shouldReturnEligibleOffersForCardholder_whenValidCardholderId() {
+    void shouldReturnEligibleOffers_whenCardholderHasActiveCards() {
         Long cardholderId = 1L;
         Cardholder cardholder = aCardholder();
-        List<CardholderCard> activeCards = Arrays.asList(aCardholderCard());
-        List<Offer> offers = Arrays.asList(new Offer());
+        when(cardholderRepository.findById(cardholderId)).thenReturn(Optional.of(cardholder));
 
-        when(cardholderRepository.findById(cardholderId)).thenReturn(java.util.Optional.of(cardholder));
-        when(cardholderCardRepository.findByCardholderIdAndActiveTrue(cardholderId)).thenReturn(activeCards);
-        when(offerRepository.findActiveOffers(LocalDate.now())).thenReturn(offers);
-        when(offerMapper.toDTO(any())).thenReturn(new OfferDTO());
+        CardholderCard card = aCardholderCard();
+        card.setCardholder(cardholder);
+        card.setActive(true);
+        when(cardholderCardRepository.findByCardholderIdAndActiveTrue(cardholderId)).thenReturn(List.of(card));
+
+        Offer offer = new Offer();
+        offer.setCardNetwork(card.getCardNetwork());
+        offer.setMaxRedemptions(10);
+        offer.setCurrentRedemptions(5);
+        when(offerRepository.findActiveOffers(LocalDate.now())).thenReturn(List.of(offer));
+
+        OfferDTO offerDTO = new OfferDTO();
+        when(offerMapper.toDTO(offer)).thenReturn(offerDTO);
 
         EligibleOfferResponseDTO response = offerEligibilityServiceImpl.getEligibleOffersForCardholder(cardholderId);
 
         assertNotNull(response);
-        assertEquals(cardholderId, response.getCardholderId());
-        assertEquals("John Doe", response.getCardholderName());
         assertEquals(1, response.getTotalOffers());
+        assertEquals("John Doe", response.getCardholderName());
     }
 
     @Test
-    void shouldThrowResourceNotFoundException_whenCardholderNotFound() {
-        Long cardholderId = 1L;
-
-        when(cardholderRepository.findById(cardholderId)).thenReturn(java.util.Optional.empty());
-
-        ResourceNotFoundException thrown = assertThrows(ResourceNotFoundException.class, () ->
-                offerEligibilityServiceImpl.getEligibleOffersForCardholder(cardholderId));
-        assertEquals("Cardholder not found", thrown.getMessage());
-    }
-
-    @Test
-    void shouldThrowCardholderNotEligibleException_whenNoActiveCards() {
+    void shouldThrowCardholderNotEligibleException_whenCardholderHasNoActiveCards() {
         Long cardholderId = 1L;
         Cardholder cardholder = aCardholder();
-
-        when(cardholderRepository.findById(cardholderId)).thenReturn(java.util.Optional.of(cardholder));
+        when(cardholderRepository.findById(cardholderId)).thenReturn(Optional.of(cardholder));
         when(cardholderCardRepository.findByCardholderIdAndActiveTrue(cardholderId)).thenReturn(Collections.emptyList());
 
-        CardholderNotEligibleException thrown = assertThrows(CardholderNotEligibleException.class, () ->
-                offerEligibilityServiceImpl.getEligibleOffersForCardholder(cardholderId));
-        assertEquals("Cardholder has no active cards", thrown.getMessage());
+        Exception exception = assertThrows(CardholderNotEligibleException.class, () -> {
+            offerEligibilityServiceImpl.getEligibleOffersForCardholder(cardholderId);
+        });
+
+        assertEquals("Cardholder has no active cards", exception.getMessage());
     }
 
     @Test
-    void shouldFilterOffersByCategory_whenValidCategory() {
+    void shouldThrowResourceNotFoundException_whenCardholderDoesNotExist() {
         Long cardholderId = 1L;
-        String category = "RETAIL";
-        List<OfferDTO> offers = Arrays.asList(new OfferDTO());
+        when(cardholderRepository.findById(cardholderId)).thenReturn(Optional.empty());
 
-        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO().setEligibleOffers(offers));
+        Exception exception = assertThrows(ResourceNotFoundException.class, () -> {
+            offerEligibilityServiceImpl.getEligibleOffersForCardholder(cardholderId);
+        });
 
-        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByCategory(cardholderId, category);
-
-        assertNotNull(filteredOffers);
-        assertEquals(offers.size(), filteredOffers.size());
+        assertEquals("Cardholder not found", exception.getMessage());
     }
 
     @Test
-    void shouldReturnAllOffers_whenCategoryIsNull() {
+    void shouldFilterOffersByCategory_whenCategoryIsValid() {
         Long cardholderId = 1L;
-        List<OfferDTO> offers = Arrays.asList(new OfferDTO());
+        OfferDTO offerDTO = new OfferDTO();
+        offerDTO.setMerchant(new MerchantDTO());
+        offerDTO.getMerchant().setCategory("Grocery");
+        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO(List.of(offerDTO)));
 
-        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO().setEligibleOffers(offers));
+        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByCategory(cardholderId, "Grocery");
 
-        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByCategory(cardholderId, null);
-
-        assertNotNull(filteredOffers);
-        assertEquals(offers.size(), filteredOffers.size());
+        assertEquals(1, filteredOffers.size());
+        assertEquals("Grocery", filteredOffers.get(0).getMerchant().getCategory());
     }
 
     @Test
-    void shouldFilterOffersByOfferType_whenValidOfferType() {
+    void shouldReturnEmptyList_whenNoOffersMatchCategory() {
         Long cardholderId = 1L;
-        String offerType = "DISCOUNT";
-        List<OfferDTO> offers = Arrays.asList(new OfferDTO());
+        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO(Collections.emptyList()));
 
-        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO().setEligibleOffers(offers));
+        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByCategory(cardholderId, "Grocery");
 
-        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByOfferType(cardholderId, offerType);
-
-        assertNotNull(filteredOffers);
-        assertEquals(offers.size(), filteredOffers.size());
+        assertTrue(filteredOffers.isEmpty());
     }
 
     @Test
-    void shouldReturnAllOffers_whenOfferTypeIsNull() {
+    void shouldFilterOffersByOfferType_whenOfferTypeIsValid() {
         Long cardholderId = 1L;
-        List<OfferDTO> offers = Arrays.asList(new OfferDTO());
+        OfferDTO offerDTO = new OfferDTO();
+        offerDTO.setOfferType("Cashback");
+        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO(List.of(offerDTO)));
 
-        when(offerEligibilityService.getEligibleOffersForCardholder(cardholderId)).thenReturn(anEligibleOfferResponseDTO().setEligibleOffers(offers));
+        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByOfferType(cardholderId, "Cashback");
 
-        List<OfferDTO> filteredOffers = offerEligibilityServiceImpl.filterOffersByOfferType(cardholderId, null);
-
-        assertNotNull(filteredOffers);
-        assertEquals(offers.size(), filteredOffers.size());
+        assertEquals(1, filteredOffers.size());
+        assertEquals("Cashback", filteredOffers.get(0).getOfferType());
     }
 
     private static Cardholder aCardholder() {
@@ -172,14 +167,16 @@ class OfferEligibilityServiceImplTest {
         entity.setCardholder(aCardholder());
         entity.setCardNetwork(new CardNetwork());
         entity.setCardNumberLastFour("1234");
-        entity.setCardType("VISA");
+        entity.setCardType("Visa");
         entity.setCreatedAt(LocalDateTime.now());
         entity.setActive(true);
         return entity;
     }
 
-    private static EligibleOfferResponseDTO anEligibleOfferResponseDTO() {
+    private static EligibleOfferResponseDTO anEligibleOfferResponseDTO(List<OfferDTO> offers) {
         EligibleOfferResponseDTO entity = new EligibleOfferResponseDTO();
+        entity.setEligibleOffers(offers);
+        entity.setTotalOffers(offers.size());
         return entity;
     }
 }
